--- a/gb/22/2/7/n13560106.md
+++ b/gb/22/2/7/n13560106.md
@@ -1,55 +1,57 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ebexlp3377/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ebexlp3377/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ebexlp3377/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ebexlp3377/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ebexlp3377/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ebexlp3377/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
-
-<h6></h6>
-<hr>[replace]（<a href=<ahref;<a href=<ahref;"https://www.epochtimes.com/gb/2=><a href="https://github.com/ebexlp3377/djy/blob/master/gb/2;  = ;		= ;script=a;http://cn.epochtimes.com/gb/=https://github.com/ebexlp3377/djy/blob/master/gb/;http://www.epochtimes.com/gb/=https://github.com/ebexlp3377/djy/blob/master/gb/;https://www.epochtimes.com/gb/=https://github.com/ebexlp3377/djy/blob/master/gb/;.html=.md#1;.htm=.md#1;" height=" b;/i6/=https://www.epochtimes.com/i6/;<iframe=<a;/iframe>=/a>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>赏神韵如置身仙境 公司主管身心舒畅</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/02/id13560170-2202061822581973-600x400.jpg" />
+<h6>022年2月6日晚，房地产公司会计主管Patricia Essoric（左）带女儿Maeva观赏了神韵环球艺术团在普罗旺斯地区艾克斯的首场演出。（丽莎／大纪元）
+</h6>
+<hr>
+	<p>【大纪元2022年02月07日讯】（大纪元记者丽莎法国普罗旺斯地区艾克斯报导）“绚丽夺目，彷若置身仙境，非常美妙！”房地产公司会计主管Patricia Essoric观赏<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后表示：“演出散发出的能量让我身心舒畅。”</p>
+<p>2022年2月6日晚，Essoric带女儿Maeva慕名前往普罗旺斯大剧院（Grand Theatre de Provence），观赏了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在艾克斯的首场演出。</p>
+<p>“两年前我们就买好了票，演出（因疫情）一再推延，现在终于看到了，感到非常开心。”她说，“节目丰富多彩，我们非常喜爱。”</p>
+<p>Essoric笑说：“从剧院走出来，我们觉得自己很有佛性。”</p>
+<p>她表示：“演出中的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>很美妙，歌曲动人心弦，特别是弹奏（二胡）乐器的那位女士的（独奏）节目，非常经典。”</p>
+<p>Maeva对精美的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%89%8B%E5%B7%A5%E6%9C%8D%E9%A5%B0.md#1">手工服饰</a>最为倾心：“我非常喜欢演员的服饰。他们旋转舞动的时候，衣服就随之飘舞开展，十分美妙。”</p>
+<p>Essoric说：“从演出中我们了解到一些中国的历史，不同的节目代表着不同的地区，令人神往。”</p>
+<p>她表示，观看神韵之前没有听说过法轮功，更不知道中共发动的这场信仰迫害，通过观赏舞剧、聆听主持人介绍，了解到“这样的修炼在中国被打压，我很受触动”。</p>
+<p>“演出植根于中国的文化，也讲述了一点有关现在中国正在发生的事情，这非常好。”她赞佩地说。</p>
+<p>责任编辑：嘉莲</p>
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/20/2/19/n11879862.md#1">“全栗招商”专业服务启动</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/20/8/28/n12364288.md#1">蔗埕冰乐园  嘉义县蒜头糖厂东仓库招商</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/13/n13501868.md#1">嘉义市底渣再利用场等工程祈福动土典礼</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/14/n13502743.md#1">北港工艺坊生肖联展 45位工艺家为虎年祈福</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/15/n13507011.md#1">“以爱为名” 屏县府携手宗教团体办祈福会</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/23/n13523605.md#1">桃园采2499人均阴 走春祈福元宵动态活动取消</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/28/n13535499.md#1">北荣桃院长住民同挥毫 袪疫祈福迎新年</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/28/n13536412.md#1">明知虎山难，偏向虎山行！</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/28/n13535601.md#1">配合防疫改变福袋发送 县长率队向团队拜年</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/28/n13535645.md#1">节气养生 营养师养身养心篇</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/6/n13558103.md#1">阔别三年克利夫兰迎来神韵 音乐家表达敬意</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/6/n13558162.md#1">歌手：神韵开启观众灵性 潜移默化改变世界</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/6/n13558174.md#1">神韵传递“文化之美” 教会领袖为之感动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/6/n13558210.md#1">神韵歌词意境感人至深 公司老板深受触动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/6/n13558233.md#1">医生观神韵叹自己太幸运 立刻再买第二天门票</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/6/n13558298.md#1">前助理首席执行法警： 所有人都应该看神韵</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/1/n11693550.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139号囚犯——红色影星赵丹的凄惨人生</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/28/n13536059.md#1">立春养生吃什么？古来重视这一盘</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/27/n13534406.md#1">【百年真相】 海军副司令王守业被情妇告倒</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/25/n13529163.md#1">【百年真相】中共是真凶？李公朴闻一多遇害谜团</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/30/n13543055.md#1">【未解之谜】“天外神物”舍利子</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/26/n13531530.md#1">蔡大雅：台湾 为世界点上光明之灯</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/5/n13557233.md#1">【财商天下】承认“技不如人”北大报告被急删</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/6/n13557673.md#1">【舞蹈三剑客】挑战美国知名美妆客：快速卸掉舞台妆</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/6/n13557928.md#1">【横河观点】俄乌危机拉动台海 中共首次怼美</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/5/n13557271.md#1">普京获北京五千亿大单后 缺席习近平宴会</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/5/n13556223.md#1">习近平现身冬奥开幕式 身形臃肿 步履蹒跚</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/5/n13557217.md#1">冬奥隔离酒店饭菜差问题多 多国运动员哭诉</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/4/n13555769.md#1">演周瑜身高曾被质疑 梁朝伟获林志玲化解尴尬</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/6/n13558346.md#1">林志玲当妈后再发声 8字亲回蔡总统祝福</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/4/n13555975.md#1">46岁生日晒与妈妈合照 陈坤嘟嘴模样引热议</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/5/n13556918.md#1">《月球陨落》影评：抬头可见的月亮 也可带来重大灾难</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/5/n13556356.md#1">JIMIN阑尾炎手术后恢复迅速 出院并解除隔离</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/15/n13505804.md#1">补蛋白质却没用？营养师：抗癌关键是吃足热量</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/4/n13555603.md#1">很多人把自己的生肖搞错了 你真正的属相是？</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/1/29/n13537814.md#1">心肌梗塞可预防 留意皮肤、耳朵2征兆</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/4/n13554586.md#1">床头朝西是大忌！风水师透露卧室布置4要点</a></li>
-<li><a href="https://github.com/ebexlp3377/djy/blob/master/gb/22/2/4/n13555310.md#1">健康的海鲜炖菜食谱</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ebexlp3377/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ebexlp3377/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/7/n13560106.htm"></a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/7/n13560106.htm">赏神韵如置身仙境 公司主管身心舒畅</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ebexlp3377/djy/blob/master/gb/22/2/7/n13560106.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ebexlp3377/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ebexlp3377/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ebexlp3377/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ebexlp3377/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ebexlp3377/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/22/2/7/n13560106.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
